Web Audio: show autoplay error message based on the current policy.

Bug: 794508
Change-Id: If7c5fe5668ef676a0b0ed4d62b0166e8d62dff7c
Reviewed-on: https://chromium-review.googlesource.com/840001
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525725}
Former-commit-id: b89cc57c5b6cfbd8881ea27b09bb7c444706a350